--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,15 +3,17 @@ name = "server"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "GuilhermeRS",email = "guilhermemuralha2016@gmail.com"}
+    {name = "Guilherme Rosa",email = "guilhermemuralha2016@gmail.com"}
 ]
+readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "django (>=6.0.2,<7.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "pillow (>=12.1.1,<13.0.0)"
+    "pillow (>=12.1.1,<13.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 
